--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <script src="../lib/p5.dom.js"></script>
     <script src="../lib/p5.sound.js"></script>
     <script src="character.js"></script>
-    
+    <script src="map.js"></script>
     <script src="sketch.js"></script>
   </head>
   <body>
